src/generated/ayanami_parser.rs
// @generated
#[allow(unused)]

pub const KEYWORDS: &[&str] = &["fn", "return", "if", "else", "true", "false", "while", "for", "in", "match", "enum", "struct", "interface", "impl", "pub", "shared", "unique", "weak", "ref", "mut", "extern", "import", "as", "break", "continue", "self", "move", "clone", "inline", "let"];

pub fn tokenize(input: &str) -> Vec<asuka::runtime::Token> {
    let mut lex = asuka::runtime::Lexer::new(input);
    let mut tokens = Vec::new();
    loop {
        lex.skip_ws();
        if lex.pos >= lex.chars.len() { break; }
        let c = lex.chars[lex.pos];
        match c {
            '"' => tokens.push(lex.read_string()),
            c if c.is_ascii_digit() => tokens.push(lex.read_number()),
            c if c.is_alphabetic() || c == '_' => tokens.push(lex.read_ident(KEYWORDS)),
            '!' => {
                if lex.pos+1<lex.chars.len() && lex.chars[lex.pos+1]=='=' { tokens.push(lex.read_fixed("!=", "!=")); }
                else { tokens.push(lex.read_fixed("!", "!")); }
            }
            '%' => tokens.push(lex.read_fixed("%", "%")),
            '&' => tokens.push(lex.read_fixed("&&", "&&")),
            '(' => tokens.push(lex.read_fixed("(", "(")),
            ')' => tokens.push(lex.read_fixed(")", ")")),
            '*' => tokens.push(lex.read_fixed("*", "*")),
            '+' => tokens.push(lex.read_fixed("+", "+")),
            ',' => tokens.push(lex.read_fixed(",", ",")),
            '-' => {
                if lex.pos+1<lex.chars.len() && lex.chars[lex.pos+1]=='>' { tokens.push(lex.read_fixed("->", "->")); }
                else { tokens.push(lex.read_fixed("-", "-")); }
            }
            '.' => tokens.push(lex.read_fixed(".", ".")),
            '/' => tokens.push(lex.read_fixed("/", "/")),
            ':' => {
                if lex.pos+1<lex.chars.len() && lex.chars[lex.pos+1]==':' { tokens.push(lex.read_fixed("::", "::")); }
                else { tokens.push(lex.read_fixed(":", ":")); }
            }
            ';' => tokens.push(lex.read_fixed(";", ";")),
            '<' => {
                if lex.pos+1<lex.chars.len() && lex.chars[lex.pos+1]=='=' { tokens.push(lex.read_fixed("<=", "<=")); }
                else { tokens.push(lex.read_fixed("<", "<")); }
            }
            '=' => {
                if lex.pos+1<lex.chars.len() && lex.chars[lex.pos+1]=='=' { tokens.push(lex.read_fixed("==", "==")); }
                if lex.pos+1<lex.chars.len() && lex.chars[lex.pos+1]=='>' { tokens.push(lex.read_fixed("=>", "=>")); }
                else { tokens.push(lex.read_fixed("=", "=")); }
            }
            '>' => {
                if lex.pos+1<lex.chars.len() && lex.chars[lex.pos+1]=='=' { tokens.push(lex.read_fixed(">=", ">=")); }
                else { tokens.push(lex.read_fixed(">", ">")); }
            }
            '[' => tokens.push(lex.read_fixed("[", "[")),
            ']' => tokens.push(lex.read_fixed("]", "]")),
            '{' => tokens.push(lex.read_fixed("{", "{")),
            '|' => tokens.push(lex.read_fixed("||", "||")),
            '}' => tokens.push(lex.read_fixed("}", "}")),
            _ => panic!("unexpected '{}'", c),
        }
    }
    tokens.push(asuka::runtime::Token { kind: "EOF".into(), span: asuka::runtime::Span::new(), value: String::new() });
    tokens
}

pub struct Parser(pub asuka::runtime::Parser);
impl Parser {
    pub fn new(tokens: Vec<asuka::runtime::Token>) -> Self { Self(asuka::runtime::Parser::new(tokens)) }

    pub fn pi(&mut self) -> Result<asuka::runtime::Value, String> {
        let t = self.0.tok().clone();
        if t.kind != "Ident" { return Err("expected ident".into()); }
        self.0.adv();
        let mut node = asuka::runtime::Node::new("Ident");
        node.set("value", asuka::runtime::Value::String(t.value));
        Ok(asuka::runtime::Value::Node(Box::new(node)))
    }
    pub fn pn(&mut self) -> Result<asuka::runtime::Value, String> {
        let t = self.0.tok().clone();
        if t.kind != "IntLit" { return Err("expected int".into()); }
        self.0.adv();
        let n: i64 = t.value.parse().map_err(|_| "bad int")?;
        let mut node = asuka::runtime::Node::new("IntLit");
        node.set("value", asuka::runtime::Value::Int(n));
        Ok(asuka::runtime::Value::Node(Box::new(node)))
    }
    pub fn ps(&mut self) -> Result<asuka::runtime::Value, String> {
        let t = self.0.tok().clone();
        if t.kind != "StrLit" { return Err("expected string".into()); }
        self.0.adv();
        let mut node = asuka::runtime::Node::new("StrLit");
        node.set("value", asuka::runtime::Value::String(t.value));
        Ok(asuka::runtime::Value::Node(Box::new(node)))
    }

    pub fn pprogram(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Program");
        if let asuka::runtime::Value::Node(child) = self.pitem()? {
            n.set("item", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pitem(&mut self) -> Result<asuka::runtime::Value, String> {
        if let Ok(val) = self.pfn_decl() { return Ok(val); }
        if let Ok(val) = self.pstruct_def() { return Ok(val); }
        if let Ok(val) = self.penum_def() { return Ok(val); }
        if let Ok(val) = self.pinterface_def() { return Ok(val); }
        if let Ok(val) = self.pimpl_block() { return Ok(val); }
        if let Ok(val) = self.pimport() { return Ok(val); }
        if let Ok(val) = self.pnamespace() { return Ok(val); }
        return Err(format!("no alt"));
    }

    pub fn pimport(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Import");
        self.0.expect("IMPORT")?;
        if let asuka::runtime::Value::Node(child) = self.ps()? {
            n.set("string_literal", asuka::runtime::Value::Node(child));
        }
        self.0.expect(";")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pnamespace(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Namespace");
        if let asuka::runtime::Value::Node(child) = self.pvis()? {
            n.set("vis", asuka::runtime::Value::Node(child));
        }
        self.0.expect("NAMESPACE")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        self.0.expect("{")?;
        if let asuka::runtime::Value::Node(child) = self.pitem()? {
            n.set("item", asuka::runtime::Value::Node(child));
        }
        self.0.expect("}")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pfn_decl(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("FnDecl");
        if let asuka::runtime::Value::Node(child) = self.pvis()? {
            n.set("vis", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pinline()? {
            n.set("inline", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pextern_c()? {
            n.set("extern_c", asuka::runtime::Value::Node(child));
        }
        self.0.expect("FN")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pgeneric_params()? {
            n.set("generic_params", asuka::runtime::Value::Node(child));
        }
        self.0.expect("(")?;
        if let asuka::runtime::Value::Node(child) = self.pparam_list()? {
            n.set("param_list", asuka::runtime::Value::Node(child));
        }
        self.0.expect(")")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pblock()? {
            n.set("block", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pfn_param(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("FnParam");
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pparam_list(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("ParamList");
        if let asuka::runtime::Value::Node(child) = self.pfn_param()? {
            n.set("fn_param", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pvis(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Vis");
        self.0.expect("PUB")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pinline(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Inline");
        self.0.expect("INLINE")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pextern_c(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("ExternC");
        self.0.expect("EXTERN")?;
        if let asuka::runtime::Value::Node(child) = self.ps()? {
            n.set("string_literal", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pstruct_def(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("StructDef");
        if let asuka::runtime::Value::Node(child) = self.pvis()? {
            n.set("vis", asuka::runtime::Value::Node(child));
        }
        self.0.expect("STRUCT")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pgeneric_params()? {
            n.set("generic_params", asuka::runtime::Value::Node(child));
        }
        self.0.expect("{")?;
        if let asuka::runtime::Value::Node(child) = self.pfield_list()? {
            n.set("field_list", asuka::runtime::Value::Node(child));
        }
        self.0.expect("}")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pfield(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Field");
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pfield_list(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("FieldList");
        if let asuka::runtime::Value::Node(child) = self.pfield()? {
            n.set("field", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn penum_def(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("EnumDef");
        if let asuka::runtime::Value::Node(child) = self.pvis()? {
            n.set("vis", asuka::runtime::Value::Node(child));
        }
        self.0.expect("ENUM")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pgeneric_params()? {
            n.set("generic_params", asuka::runtime::Value::Node(child));
        }
        self.0.expect("{")?;
        if let asuka::runtime::Value::Node(child) = self.pvariant_list()? {
            n.set("variant_list", asuka::runtime::Value::Node(child));
        }
        self.0.expect("}")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pvariant(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Variant");
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pvariant_list(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("VariantList");
        if let asuka::runtime::Value::Node(child) = self.pvariant()? {
            n.set("variant", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pinterface_def(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("InterfaceDef");
        if let asuka::runtime::Value::Node(child) = self.pvis()? {
            n.set("vis", asuka::runtime::Value::Node(child));
        }
        self.0.expect("INTERFACE")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pgeneric_params()? {
            n.set("generic_params", asuka::runtime::Value::Node(child));
        }
        self.0.expect("{")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("iface_method_list", asuka::runtime::Value::Node(child));
        }
        self.0.expect("}")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn piface_method(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("IfaceMethod");
        self.0.expect("FN")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        self.0.expect("(")?;
        if let asuka::runtime::Value::Node(child) = self.pself_param()? {
            n.set("self_param", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        self.0.expect(")")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        self.0.expect(";")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pself_param(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("SelfParam");
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        self.0.expect("SELF")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pimpl_block(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("ImplBlock");
        if let asuka::runtime::Value::Node(child) = self.pvis()? {
            n.set("vis", asuka::runtime::Value::Node(child));
        }
        self.0.expect("IMPL")?;
        if let asuka::runtime::Value::Node(child) = self.pgeneric_params()? {
            n.set("generic_params", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pgeneric_args()? {
            n.set("generic_args", asuka::runtime::Value::Node(child));
        }
        self.0.expect("{")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("method_list", asuka::runtime::Value::Node(child));
        }
        self.0.expect("}")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pmethod(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Method");
        if let asuka::runtime::Value::Node(child) = self.pvis()? {
            n.set("vis", asuka::runtime::Value::Node(child));
        }
        self.0.expect("FN")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pgeneric_params()? {
            n.set("generic_params", asuka::runtime::Value::Node(child));
        }
        self.0.expect("(")?;
        if let asuka::runtime::Value::Node(child) = self.pself_param()? {
            n.set("self_param", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        self.0.expect(")")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pblock()? {
            n.set("block", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pgeneric_args(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("GenericArgs");
        self.0.expect("[")?;
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        self.0.expect("]")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pgeneric_params(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("GenericParams");
        self.0.expect("[")?;
        if let asuka::runtime::Value::Node(child) = self.pgeneric_param()? {
            n.set("generic_param", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        self.0.expect("]")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pgeneric_param(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("GenericParam");
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn ptyp(&mut self) -> Result<asuka::runtime::Value, String> {
        if let Ok(val) = self.ptype_base() { return Ok(val); }
        if let Ok(val) = self.pshared_type() { return Ok(val); }
        if let Ok(val) = self.punique_type() { return Ok(val); }
        if let Ok(val) = self.pweak_type() { return Ok(val); }
        if let Ok(val) = self.pfn_type() { return Ok(val); }
        if let Ok(val) = self.parray_type() { return Ok(val); }
        if let Ok(val) = self.pref_type() { return Ok(val); }
        return Err(format!("no alt"));
    }

    pub fn ptype_base(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("TypeBase");
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pshared_type(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("SharedType");
        self.0.expect("SHARED")?;
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn punique_type(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("UniqueType");
        self.0.expect("UNIQUE")?;
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pweak_type(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("WeakType");
        self.0.expect("WEAK")?;
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pref_type(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("RefType");
        self.0.expect("REF")?;
        self.0.expect("MUT")?;
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pfn_type(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("FnType");
        self.0.expect("FN")?;
        self.0.expect("(")?;
        if let asuka::runtime::Value::Node(child) = self.ptype_list()? {
            n.set("type_list", asuka::runtime::Value::Node(child));
        }
        self.0.expect(")")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn parray_type(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("ArrayType");
        self.0.expect("[")?;
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        self.0.expect("]")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn ptype_list(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("TypeList");
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("", asuka::runtime::Value::Node(child));
        }
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pblock(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("Block");
        self.0.expect("{")?;
        if let asuka::runtime::Value::Node(child) = self.pstmt()? {
            n.set("stmt", asuka::runtime::Value::Node(child));
        }
        self.0.expect("}")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pstmt(&mut self) -> Result<asuka::runtime::Value, String> {
        if let Ok(val) = self.pvar_decl() { return Ok(val); }
        if let Ok(val) = self.pfield_assign() { return Ok(val); }
        if let Ok(val) = self.pindex_assign() { return Ok(val); }
        if let Ok(val) = self.preturn_stmt() { return Ok(val); }
        if let Ok(val) = self.pif_stmt() { return Ok(val); }
        if let Ok(val) = self.pwhile_stmt() { return Ok(val); }
        if let Ok(val) = self.pfor_stmt() { return Ok(val); }
        if let Ok(val) = self.pmatch_stmt() { return Ok(val); }
        if let Ok(val) = self.pbreak_stmt() { return Ok(val); }
        if let Ok(val) = self.pcontinue_stmt() { return Ok(val); }
        if let Ok(val) = self.pexpr_stmt() { return Ok(val); }
        if let Ok(val) = self.pblock() { return Ok(val); }
        return Err(format!("no alt"));
    }

    pub fn pvar_decl(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("VarDecl");
        if let asuka::runtime::Value::Node(child) = self.ptyp()? {
            n.set("typ", asuka::runtime::Value::Node(child));
        }
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        self.0.expect("=")?;
        if let asuka::runtime::Value::Node(child) = self.pexpr()? {
            n.set("expr", asuka::runtime::Value::Node(child));
        }
        self.0.expect(";")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }

    pub fn pfield_assign(&mut self) -> Result<asuka::runtime::Value, String> {
        let mut n = asuka::runtime::Node::new("FieldAssign");
        if let asuka::runtime::Value::Node(child) = self.pexpr()? {
            n.set("expr", asuka::runtime::Value::Node(child));
        }
        self.0.expect(".")?;
        if let asuka::runtime::Value::Node(child) = self.pi()? {
            n.set("ident", asuka::runtime::Value::Node(child));
        }
        self.0.expect("=")?;
        if let asuka::runtime::Value::Node(child) = self.pexpr()? {
            n.set("expr", asuka::runtime::Value::Node(child));
        }
        self.0.expect(";")?;
        Ok(asuka::runtime::Value::Node(Box::new(n)))
    }
